[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["Haneen Hashlamoun <haneen.hashlamoun@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
jupyterlab = "^3.2.1"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
